apps/dev/patches/patch-deployment-cdk.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: fastapi
spec:
  template:
    spec:
      containers:
      - image: 532673134317.dkr.ecr.eu-west-1.amazonaws.com/services/ecs/fastapi_app:dev
        name: fastapi
        resources:
          limits:
            cpu: "1.5"
            memory: "512Mi"
          requests:
            cpu: "1.5"
            memory: "512Mi"
